# simplex-chat

apps/android/: .gitignore  build.gradle.kts  gradle.properties
apps/android/android/: build.gradle.kts
apps/android/android/src/main/cpp/desktop/: CMakeLists.txt  simplex-api.c
apps/android/android/src/main/java/chat/simplex/app/: MainActivity.kt  SimplexApp.kt  SimplexService.kt
apps/android/android/src/main/java/chat/simplex/app/views/call/: IncomingCallActivity.kt
apps/android/android/src/main/java/chat/simplex/app/views/chat/: ComposeView.kt
apps/android/common/: build.gradle.kts
apps/android/common/src/androidMain/: AndroidManifest.xml
apps/android/common/src/androidMain/kotlin/chat/simplex/common/platform/: AppCommon.android.kt  Files.android.kt  Images.android.kt  Resources.android.kt  Share.android.kt  UI.android.kt
apps/android/common/src/androidMain/kotlin/chat/simplex/common/views/call/: CallView.android.kt
apps/android/common/src/androidMain/kotlin/chat/simplex/common/views/helpers/: LocalAuthentication.android.kt  Util.android.kt
apps/android/common/src/androidMain/kotlin/chat/simplex/common/views/newchat/: QRCodeScanner.android.kt
apps/android/common/src/commonMain/cpp/desktop/: CMakeLists.txt  simplex-api.c
apps/android/common/src/commonMain/kotlin/chat/simplex/common/: App.kt
apps/android/common/src/commonMain/kotlin/chat/simplex/common/model/: SimpleXAPI.kt
apps/android/common/src/commonMain/kotlin/chat/simplex/common/platform/: AppCommon.kt  Files.kt  Resources.kt  Share.kt  UI.kt
apps/android/common/src/commonMain/kotlin/chat/simplex/common/ui/theme/: ThemeManager.kt  Type.kt
apps/android/common/src/commonMain/kotlin/chat/simplex/common/views/: TerminalView.kt
apps/android/common/src/desktopMain/kotlin/chat/simplex/common/: DesktopApp.kt
apps/android/common/src/desktopMain/kotlin/chat/simplex/common/platform/: AppCommon.desktop.kt  Back.desktop.kt  Crypto.desktop.kt  Files.desktop.kt  Images.desktop.kt  Log.desktop.kt  PlatformTextField.desktop.kt  RecAndPlay.desktop.kt  Resources.desktop.kt  Share.desktop.kt  UI.desktop.kt  VideoPlayer.android.kt
apps/android/desktop/: build.gradle.kts
apps/android/desktop/src/jvmMain/kotlin/: Main.kt
(+42 files in other folders)
